added user and test properties
